fixed parsing of column-value arrays. changed tests accordingly.